--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-**Chocolatey Package for Red Notebook**
+#Chocolatey Package for Red Notebook
 
 This is my first Chocolatey Package so feel free to comment or criticize.
 I will tryout the GitHub Releases and add the final .nupkg file there!
 
 I am also thinking about automating the cycle but I don't know in which language yet, prop Python.
 
-Project Url: http://rednotebook.sourceforge.net  
-Project Github: https://github.com/jendrikseipp/rednotebook  
+Project Url: http://rednotebook.sourceforge.net
+Project Github: https://github.com/jendrikseipp/rednotebook
 Chocolatey Link: https://chocolatey.org/packages/rednotebook/
